# rapina-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/tools/: cli.rs  explain.rs  mod.rs
