[package]
name = "rapina-mcp"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for the Rapina web framework"
license = "MIT"
repository = "https://github.com/rapina-rs/rapina-mcp"
keywords = ["mcp", "rapina", "web", "framework", "ai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rapina-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
toml = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.102"
